# SatisFlow

./: .gitignore  AGENTS.md  BACKEND-IMPLEMENTATION-PLAN.md  BLUEPRINT_LIBRARY_IMPLEMENTATION.md  BLUEPRINT_SYSTEM_EVIDENCE.md  CALCULATION_MIGRATION_PLAN.md  CALCULATION_MIGRATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FRONTEND-REFACTORING-PLAN.md  FRONTEND-implementation-plan.md  FRONTEND_CALCULATION_REVIEW.md  LICENSE  README.md  build-web.sh  dev.sh  example-blueprint-iron-plates.json  example-blueprint-motor-production.json  example-blueprint-reinforced-plates.json  rebuild-wasm.sh  satisfactory_data.json
.claude/: settings.local.json
.kilocode/rules/memory-bank/: api-and-testing.md  architecture.md  brief.md  development-guide.md  implementation-status.md
crates/: MIGRATION-STRATEGY.md
crates/satisflow-engine/: AGENTS.md  Cargo.toml  demo_save.json
crates/satisflow-engine/src/: game_data.rs  init.rs  lib.rs  static_data.rs  version.rs
crates/satisflow-engine/src/engine/: calculator.rs  mod.rs  persistence.rs
crates/satisflow-engine/src/examples/: FEATURE_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  README.md  example_usage.rs  factory_example.rs  mod.rs  test_program.rs
crates/satisflow-engine/src/models/: data_validation_tests.rs  factory.rs  game_data.rs  ids.rs  items.rs  items_data.inc  logistics.rs  mod.rs  power_generator.rs  production_line.rs  raw_input.rs  recipe.rs  recipes.rs  recipes_data.inc  types.rs
crates/satisflow-server/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  PRODUCTION.md  README.md  deploy.bat  deploy.sh  docker-compose.yml
crates/satisflow-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/satisflow-server/src/handlers/: blueprint.rs  blueprint_templates.rs  dashboard.rs  factory.rs  game_data.rs  logistics.rs  mod.rs  save_load.rs
crates/satisflow-server/tests/: README.md  api_tests.rs  calculated_fields.rs  factories_lifecycle.rs  logistics_transports.rs  test_runner.rs
crates/satisflow-server/tests/common/: mod.rs
crates/satisflow-wasm/: Cargo.toml
crates/satisflow-wasm/src/: lib.rs
data/: items.json
design/: README.md  architecture.md  next.md  requirements.md
docs/: API_CONTRACT.md  BACKEND_GUIDE.md  BLUEPRINT_FEATURE_STATUS.md  FRONTEND_GUIDE.md  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md
docs/archive/blueprint-v1-import-export/: BLUEPRINT_FEATURE_COMPLETE.md  BLUEPRINT_FEATURE_PROMPT.md  BLUEPRINT_IMPLEMENTATION_FINAL_STEPS.md  BLUEPRINT_QUICK_START.md  README.md  README_BLUEPRINT_FEATURE.md
docs/archive/blueprintv2-frontend/: BLUEPRINT_LIBRARY_IMPLEMENTATION.md  EXEMPLE_BLUEPRINT_README.md
docs/archive/calculation-migration/: CALCULATION_MIGRATION_PLAN.md  FRONTEND_CALCULATION_REVIEW.md
features/: accessibility-compliance-pass.md  api-layer-and-dto-alignment.md  centralized-error-notification-platform.md  datatable-overhaul.md  design-system-and-theming.md  developer-experience-and-ci-enhancements.md  form-validation-and-previews.md  frontend-performance-strategy.md  information-architecture-and-navigation.md  modal-focus-and-keyboard-control.md  state-management-hardening.md  testing-expansion-roadmap.md  transport-editors-cleanup.md
frontend/: .gitignore  README-TESTING.md  TESTING-STRATEGY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/.github/workflows/: test.yml
frontend/docs/: TESTING.md
frontend/e2e/: calculation-accuracy.spec.ts  save-load.spec.ts
frontend/src/: AGENTS.md  App.vue  main.ts
frontend/src/__tests__/: App.spec.ts
frontend/src/api/: client.ts  endpoints.ts  index.ts  logistics-types.ts  types.ts
frontend/src/api/__tests__/: client.test.ts  endpoints.test.ts
frontend/src/assets/css/: components.css  layout.css  main.css  variables.css
frontend/src/assets/styles/: blueprint-pattern.css  industrial-overrides.css  micro-interactions.css  transitions.css  typography.css  variables.css
frontend/src/components/: AddFactoryModal.vue  AddLogisticsModal.vue  AddProductionLineModal.vue  AddRawInputModal.vue  EditLogisticsFluxModal.vue  EditProductionLineModal.vue  EditRawInputModal.vue  SearchableSelect.vue  SettingsModal.vue
frontend/src/components/__tests__/: DashboardStats.test.ts
frontend/src/components/blueprints/: BlueprintCard.vue  BlueprintDetailsModal.vue  BlueprintFormModal.vue  BlueprintImportModal.vue  FactorySelectorModal.vue
frontend/src/components/dashboard/: PowerStatsChart.vue  SaveLoadControls.vue  SummaryCards.vue  index.ts
frontend/src/components/factory/: BlueprintPreviewModal.vue  BlueprintSelectorModal.vue  FactorySelector.vue  PowerGeneratorForm.vue  PowerGeneratorList.vue  ProductionLineForm.vue  ProductionLineList.vue  RawInputForm.vue  RawInputList.vue  RecipeAutocomplete.vue  RecipeAutocompleteDemo.vue  index.ts
frontend/src/components/forms/: BaseInput.vue  BaseSelect.vue  FactoryForm.vue  FormNumber.vue  ProductionLineForm.vue  (+4 more)
frontend/src/composables/: useErrorHandler.ts  useErrorNotification.ts  useFileDownload.ts  useFileUpload.ts  useFormDraft.ts  useItemIcon.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  useTheme.ts  useToast.ts  useValidation.ts
frontend/src/lib/: tracker.ts
frontend/src/router/: index.ts
frontend/src/stores/: dashboard.ts  factory.ts  gameData.ts  index.ts  logistics.ts  preferences.ts
frontend/src/test-utils/: setup.ts  test-helpers.ts
frontend/src/tests/: README.md  calculation-violations.test.ts
frontend/src/types/: validation.ts
frontend/src/views/: BlueprintLibraryView.vue  DashboardView.vue  FactoriesView.vue  FactoryView.vue  HomeView.vue  LogisticsView.vue
frontend/tests/e2e/: dashboard.spec.ts
public/: index.html  manifest.json
public/data/: recipes.json
src/: main.rs
src/data/: mod.rs
src/engine/: calculator.rs  mod.rs  persistence.rs
src/gui/: factory.rs  logistics.rs  mod.rs  overview.rs
src/models/: factory.rs  logistics.rs  mod.rs  recipe.rs
tests/: engine_integration.rs  logistics_ids.rs  output_routing.rs  persistence_envelope.rs  validations.rs
(+39 files in other folders)
