[package]
name = "satisflow-engine"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Pointet <maxime@maxime.pointet.fr>"]
description = "Core engine for Satisfactory factory tracking and optimization"
license = "MIT"
repository = "https://github.com/PixmaNts/SatisFlow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.21"


[lib]
name = "satisflow_engine"
crate-type = ["lib"]

