[package]
name = "satisflow-server"
version = "0.1.0"
edition = "2021"
authors = ["Maxime Pointet <maxime@maxime.pointet.fr>"]
description = "SaaS backend server for SatisFlow factory tracking"
license = "MIT"
repository = "https://github.com/PixmaNts/SatisFlow"

[[bin]]
name = "satisflow-server"
path = "src/main.rs"

[dependencies]
satisflow-engine = { path = "../satisflow-engine" }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional server-specific dependencies
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }